[gd_scene load_steps=34 format=3 uid="uid://5ds0nbfili7r"]

[ext_resource type="Script" path="res://levels/chinese_shop/chinese_shop.gd" id="1_b7fdw"]
[ext_resource type="Texture2D" uid="uid://oc04dl01oa2y" path="res://sprites/map/chinese_shop.png" id="1_t8j0g"]
[ext_resource type="Texture2D" uid="uid://crjk41fu1stee" path="res://sprites/map/marble_ceiling_1.png" id="2_28k54"]
[ext_resource type="PackedScene" uid="uid://c4ngb52mmi01b" path="res://system/game_camera.tscn" id="2_gyyup"]
[ext_resource type="Texture2D" uid="uid://cwceigqcnmnme" path="res://sprites/map/marble_floor_1.png" id="3_eii01"]
[ext_resource type="Texture2D" uid="uid://c0bhtbseu1u0o" path="res://sprites/map/white_wall_1.png" id="4_hn6hs"]
[ext_resource type="PackedScene" uid="uid://dcut15h2h71rr" path="res://player/player.tscn" id="5_lxcid"]
[ext_resource type="PackedScene" uid="uid://cn12nsqw54wlu" path="res://npcs/john_the_chinese.tscn" id="6_3q7ga"]
[ext_resource type="Texture2D" uid="uid://drkeuaoxh8jdw" path="res://sprites/chara/business_man.png" id="7_bpa8q"]
[ext_resource type="Texture2D" uid="uid://dln022q22g1wv" path="res://sprites/objects/register.png" id="7_gd848"]
[ext_resource type="Texture2D" uid="uid://bu80m2w6g5rat" path="res://sprites/chara/girl.png" id="7_tn787"]
[ext_resource type="PackedScene" uid="uid://d2ms4qedgrmr1" path="res://dialogues/dialogue_controller.tscn" id="9_in5gd"]
[ext_resource type="Script" path="res://levels/chinese_shop/chinese_shop_dialogues.gd" id="9_unmle"]
[ext_resource type="PackedScene" uid="uid://s08suqhjofp6" path="res://cutscenes/path_follow_controller.tscn" id="11_ll28q"]
[ext_resource type="Script" path="res://levels/chinese_shop/chinese_shop_path_following.gd" id="11_rp61k"]
[ext_resource type="PackedScene" uid="uid://b8ndr6xdba28q" path="res://cutscenes/cutscene_controller.tscn" id="11_s4afc"]
[ext_resource type="PackedScene" uid="uid://d3cr8d5g1hj" path="res://system/scene_transition.tscn" id="14_4peb7"]
[ext_resource type="Script" path="res://levels/chinese_shop/chinese_shop_cutscenes.gd" id="16_ck1tn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mx2ff"]
texture = ExtResource("1_t8j0g")
texture_region_size = Vector2i(32, 32)
use_texture_padding = false
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -13)
4:2/0 = 0
4:2/0/texture_origin = Vector2i(-17, 0)
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, 18)
0:1/size_in_atlas = Vector2i(1, 3)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, 32)
1:0/size_in_atlas = Vector2i(1, 5)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 64)
2:0/size_in_atlas = Vector2i(2, 3)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(-16, 32)
2:3/size_in_atlas = Vector2i(3, 2)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(-32, 16)
2:3/0/y_sort_origin = 14

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_todh6"]
texture = ExtResource("2_28k54")
texture_region_size = Vector2i(32, 32)
use_texture_padding = false
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k8oau"]
texture = ExtResource("3_eii01")
texture_region_size = Vector2i(32, 32)
use_texture_padding = false
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cs28i"]
texture = ExtResource("4_hn6hs")
texture_region_size = Vector2i(32, 32)
use_texture_padding = false
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_vapwe"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_mx2ff")
sources/1 = SubResource("TileSetAtlasSource_todh6")
sources/2 = SubResource("TileSetAtlasSource_k8oau")
sources/3 = SubResource("TileSetAtlasSource_cs28i")

[sub_resource type="AtlasTexture" id="AtlasTexture_w8ayb"]
atlas = ExtResource("7_tn787")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tisfw"]
atlas = ExtResource("7_tn787")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j5km"]
atlas = ExtResource("7_tn787")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ajrpk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8ayb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tisfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j5km")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_26unv"]
atlas = ExtResource("7_bpa8q")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjcok"]
atlas = ExtResource("7_bpa8q")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq603"]
atlas = ExtResource("7_bpa8q")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ov6su"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26unv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjcok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq603")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_1aunx"]
resource_name = "cutscene_1"
length = 4.5
step = 0.38
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../PathFollowing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.14, 1.9, 2, 2.66, 3.04, 3.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"go_near_john"
}, {
"args": [],
"method": &"john_the_chinese_goes_near_register"
}, {
"args": [],
"method": &"john_the_chinese_goes_near_register_again"
}, {
"args": [],
"method": &"john_the_chinese_moves_away_from_the_register"
}, {
"args": [],
"method": &"player_moves_near_register"
}, {
"args": [],
"method": &"player_escapes"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Player:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.38),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Dialogues")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.76, 1.52),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_cutscene_1_dialogue"
}, {
"args": [],
"method": &"play_cutscene_1_dialogue"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Objects/Register:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.1, 2.2, 3.42),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(4.18),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cutscene_1_finished_playing"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m6lma"]
_data = {
"cutscene_1": SubResource("Animation_1aunx")
}

[node name="ChineseShop" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_b7fdw")

[node name="GameCamera" parent="." instance=ExtResource("2_gyyup")]

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(15, -88)
tile_set = SubResource("TileSet_vapwe")
format = 2
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(458756, 131074, 0, 524292, 2, 1, 589828, 2, 2, 458757, 2, 0, 524293, 2, 0, 589829, 131074, 1, 655364, 65538, 1, 720900, 131074, 0, 655365, 65538, 0, 720901, 131074, 2, 458758, 2, 2, 524294, 2, 0, 589830, 2, 0, 458759, 2, 2, 524295, 2, 0, 589831, 131074, 0, 458760, 65538, 2, 524296, 65538, 2, 589832, 65538, 1, 655366, 65538, 1, 720902, 131074, 0, 655367, 2, 2, 720903, 131074, 0, 655368, 65538, 1, 720904, 131074, 2, 458761, 65538, 0, 524297, 65538, 1, 589833, 65538, 1, 458762, 2, 0, 524298, 2, 1, 589834, 65538, 2, 458763, 65538, 0, 524299, 131074, 0, 589835, 2, 2, 655369, 2, 1, 720905, 65538, 0, 655370, 2, 0, 720906, 2, 1, 655371, 131074, 2, 720907, 2, 1, 458764, 65538, 2, 524300, 65538, 1, 589836, 131074, 1, 458765, 65538, 0, 524301, 2, 1, 589837, 65538, 2, 458766, 2, 2, 524302, 131074, 1, 589838, 2, 1, 655372, 2, 2, 720908, 2, 1, 655373, 131074, 1, 720909, 65538, 2, 655374, 65538, 2, 720910, 65538, 1, 786436, 65538, 2, 851972, 65538, 0, 917508, 2, 1, 786437, 2, 1, 851973, 131074, 2, 917509, 2, 1, 786438, 131074, 0, 851974, 65538, 1, 917510, 2, 0, 786439, 2, 1, 851975, 131074, 0, 917511, 2, 1, 786440, 65538, 1, 851976, 65538, 1, 917512, 131074, 2, 786441, 2, 0, 851977, 65538, 2, 917513, 2, 2, 786442, 131074, 1, 851978, 2, 1, 917514, 2, 1, 786443, 65538, 2, 851979, 131074, 0, 917515, 65538, 2, 786444, 2, 2, 851980, 2, 0, 917516, 2, 2, 786445, 2, 1, 851981, 131074, 0, 917517, 131074, 0, 786446, 131074, 1, 851982, 65538, 2, 917518, 2, 2, 983052, 65538, 0)
layer_1/name = "walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(327684, 131075, 2, 393220, 131075, 1, 327685, 131075, 1, 393221, 65539, 1, 327686, 65539, 1, 393222, 3, 1, 327687, 131075, 2, 393223, 3, 2, 327688, 131075, 2, 393224, 65539, 0, 327689, 3, 2, 393225, 65539, 1, 327690, 3, 2, 393226, 131075, 2, 327691, 131075, 2, 393227, 131075, 2, 327692, 131075, 2, 393228, 131075, 2, 327693, 65539, 0, 393229, 3, 0, 327694, 65539, 0, 393230, 131075, 2)
layer_2/name = "objects"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(458757, 131072, 0, 458759, 131072, 0, 458761, 131072, 0, 655368, 131072, 0, 655370, 0, 1, 851972, 131072, 3, 851975, 131072, 3, 589828, 65536, 0, 720910, 0, 0, 786445, 262144, 2, 851982, 0, 4, 720902, 65536, 0, 720900, 0, 4, 393228, 0, 0, 458764, 262144, 2, 458765, 0, 4, 655364, 262144, 2, 786444, 65536, 0)
layer_3/name = "ceiling"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 1
layer_3/tile_data = PackedInt32Array(327684, 1, 0, 393220, 1, 1, 458756, 1, 1, 524292, 1, 1, 589828, 1, 1, 655364, 1, 1, 720900, 1, 1, 786436, 1, 1, 851972, 1, 1, 327685, 65537, 0, 327686, 65537, 0, 327687, 65537, 0, 327688, 65537, 0, 327689, 65537, 0, 327690, 65537, 0, 327691, 65537, 0, 327692, 65537, 0, 327693, 65537, 0, 327694, 131073, 0, 393230, 131073, 1, 458766, 131073, 1, 524302, 131073, 1, 589838, 131073, 1, 655374, 131073, 1, 720910, 131073, 1, 786446, 131073, 1, 851982, 131073, 1, 983051, 131073, 0, 983053, 1, 0, 983050, 65537, 0, 983049, 65537, 0, 983048, 65537, 0, 983047, 65537, 0, 983046, 65537, 0, 983045, 65537, 0, 983044, 65537, 0, 917508, 1, 1, 917518, 131073, 1, 983054, 65537, 0)

[node name="Objects" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Register" type="Sprite2D" parent="Objects"]
z_index = 1
position = Vector2(260, 327)
texture = ExtResource("7_gd848")
offset = Vector2(0, -11)
hframes = 3
frame = 2

[node name="Player" parent="." instance=ExtResource("5_lxcid")]
position = Vector2(417, 380)

[node name="JohnTheChinese" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_3q7ga")]
position = Vector2(208, 379)
faced_direction = 3
player = NodePath("../Player")

[node name="Girl" type="AnimatedSprite2D" parent="."]
position = Vector2(271, 295)
sprite_frames = SubResource("SpriteFrames_ajrpk")
autoplay = "default"
offset = Vector2(0, -20)

[node name="BusinessMan" type="AnimatedSprite2D" parent="."]
position = Vector2(464, 239)
sprite_frames = SubResource("SpriteFrames_ov6su")
autoplay = "default"
frame = 2
frame_progress = 0.843839
offset = Vector2(0, -20)

[node name="PathFollowing" type="Node" parent="."]
script = ExtResource("11_rp61k")

[node name="PathFollowController" parent="PathFollowing" node_paths=PackedStringArray("cutscene_animation_player", "path_follower_bodies") instance=ExtResource("11_ll28q")]
cutscene_animation_player = NodePath("../../Cutscenes/CutsceneController/Cutscenes")
path_follower_bodies = [NodePath("../../Player"), NodePath("../../JohnTheChinese")]

[node name="Dialogues" type="CanvasLayer" parent="."]
script = ExtResource("9_unmle")

[node name="DialogueController" parent="Dialogues" node_paths=PackedStringArray("player", "cutscene_animation_player") instance=ExtResource("9_in5gd")]
player = NodePath("../../Player")
cutscene_animation_player = NodePath("../../Cutscenes/CutsceneController/Cutscenes")

[node name="Cutscenes" type="Node2D" parent="."]
script = ExtResource("16_ck1tn")

[node name="CutsceneController" parent="Cutscenes" node_paths=PackedStringArray("player") instance=ExtResource("11_s4afc")]
player = NodePath("../../Player")

[node name="Cutscenes" parent="Cutscenes/CutsceneController" index="0"]
libraries = {
"": SubResource("AnimationLibrary_m6lma")
}

[node name="Transitions" type="Node" parent="."]

[node name="SceneTransition" parent="Transitions" node_paths=PackedStringArray("player", "game_camera") instance=ExtResource("14_4peb7")]
player = NodePath("../../Player")
game_camera = NodePath("../../GameCamera")

[editable path="Cutscenes/CutsceneController"]
